<resources>
    <string name="app_name">NotaUnip</string>
    <string name="np1">NP1</string>
    <string name="explicacao1">Abaixo estão as notas que você precisa tirar na NP2 para cada nota de PIM.</string>
    <string name="pim">PIM</string>
    <string name="nota1">5.0</string>
    <string name="nota2">7.5</string>
    <string name="np2">NP2</string>
    <string name="explicacao2">Defina uma nota de PIM personalizada</string>
</resources>
