<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotaUnip">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1,2,3">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/np1"
                android:textColorLink="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/np1EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:text="@string/explicacao1"
                android:textColorLink="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pim"
                android:textColorLink="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:text="@string/nota1"
                tools:text="5.0" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:text="@string/nota2" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:text="10.0" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/np2"
                android:textColorLink="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/np250EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/np275EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/np2100EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:text="@string/explicacao2"
                android:textColorLink="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pim"
                android:textColorLink="#000000"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/pimSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_span="2" />

            <EditText
                android:id="@+id/pimEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/np2"
                android:textColorLink="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/np2EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:editable="false"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>